--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -12,8 +12,8 @@ bindd = SUPER SHIFT, T, Activity, exec, $terminal -e btop
 bindd = SUPER SHIFT ALT, D, Docker, exec, $terminal -e lazydocker
 # bindd = SUPER SHIFT, G, Signal, exec, omarchy-launch-or-focus signal "uwsm-app -- signal-desktop"
 bindd = SUPER SHIFT, O, Obsidian, exec, omarchy-launch-or-focus "^obsidian$" "uwsm-app -- obsidian -disable-gpu --enable-wayland-ime"
-bindd = SUPER SHIFT, W, Typora, exec, uwsm-app -- typora
-bindd = SUPER SHIFT, SLASH, Passwords, exec, uwsm-app -- 1password
+# bindd = SUPER SHIFT, W, Typora, exec, uwsm-app -- typora
+# bindd = SUPER SHIFT, SLASH, Passwords, exec, uwsm-app -- 1password
 
 # If your web app url contains #, type it as ## to prevent hyprland treating it as a comment
 # bindd = SUPER SHIFT, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
