add calendar as a tooltip

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -66,7 +66,26 @@
     /* "format": "{:L%A %H:%M}",
     "format-alt": "{:L%d %B Week%V %Y}", */
     "format": "{:L%A %d %B %Y, %H:%M}",
-    "tooltip": false,
+    /* "locale": "en_GB.UTF-8", // week start on Monday */
+    "tooltip-format": "<tt>{calendar}</tt>",
+    "calendar": {
+      "mode": "month",
+      "mode-mon-col": 3,
+      "weeks-pos": "right",
+      "on-scroll": 1,
+      "format": {
+        "months": "<span color='#ffead3'><b>{}</b></span>",
+        "days": "<span color='#ecc6d9'>{}</span>",
+        "weeks": "<span color='#99ffdd'><b>W{}</b></span>",
+        "weekdays": "<span color='#ffcc66'><b>{}</b></span>",
+        "today": "<span color='#ff6699'><b><u>{}</u></b></span>"
+      }
+    },
+    "actions": {
+      "on-click": "mode",
+      "on-scroll-up": "shift_up",
+      "on-scroll-down": "shift_down"
+    },
     "on-click-right": "omarchy-launch-floating-terminal-with-presentation omarchy-tz-select"
   },
   "network": {
@@ -151,3 +170,5 @@
     "spacing": 17
   }
 }
+
+
