--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -1,8 +1,8 @@
 # Application bindings
-$terminal = uwsm-app -- $TERMINAL
+$terminal = uwsm-app -- xdg-terminal-exec
 $browser = omarchy-launch-browser
 
-bindd = SUPER, RETURN, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
+bindd = SUPER, RETURN, Terminal, exec, $terminal --dir="$(omarchy-cmd-terminal-cwd)"
 bindd = SUPER SHIFT, F, File manager, exec, uwsm-app -- nautilus --new-window
 bindd = SUPER SHIFT, B, Browser, exec, $browser
 bindd = SUPER SHIFT ALT, B, Browser (private), exec, $browser --private
@@ -14,6 +14,8 @@ bindd = SUPER SHIFT ALT, D, Docker, exec, $terminal -e lazydocker
 bindd = SUPER SHIFT, O, Obsidian, exec, omarchy-launch-or-focus "^obsidian$" "uwsm-app -- obsidian -disable-gpu --enable-wayland-ime"
 # bindd = SUPER SHIFT, W, Typora, exec, uwsm-app -- typora
 # bindd = SUPER SHIFT, SLASH, Passwords, exec, uwsm-app -- 1password
+bindd = SUPER SHIFT, D, Discord, exec, omarchy-launch-or-focus "^discord$" "uwsm-app -- discord --enable-features=WaylandWindowDecorations --ozone-platform=wayland"
+
 
 # If your web app url contains #, type it as ## to prevent hyprland treating it as a comment
 # bindd = SUPER SHIFT, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
@@ -22,9 +24,9 @@ bindd = SUPER SHIFT, G, Gemini, exec, omarchy-launch-webapp-firefox "https://gem
 bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp-firefox "https://mail.google.com"
 bindd = SUPER SHIFT, Y, YouTube, exec, omarchy-launch-webapp-firefox "https://youtube.com/"
 bindd = SUPER SHIFT, W, WhatsApp, exec, omarchy-launch-or-focus-webapp-firefox WhatsApp "https://web.whatsapp.com/"
-bindd = SUPER SHIFT, R, Discord, exec, omarchy-launch-webapp-firefox "https://reddit.com/"
+bindd = SUPER SHIFT, R, Reddit, exec, omarchy-launch-webapp-firefox "https://reddit.com/"
 bindd = SUPER SHIFT, M, YouTube Music, exec, omarchy-launch-or-focus-webapp-firefox "YouTube Music" "https://music.youtube.com"
-bindd = SUPER SHIFT, D, Discord, exec, omarchy-launch-or-focus-webapp-firefox Discord "https://discord.com/channels/@me"
+# bindd = SUPER SHIFT, D, Discord, exec, omarchy-launch-or-focus-webapp-firefox Discord "https://discord.com/channels/@me"
 bindd = SUPER SHIFT, H, HiAnime, exec, omarchy-launch-webapp-firefox "https://hianime.to/home"
 
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
