add gpu settings in wayland wiki and change discord to webcord

--- a/.config/hypr/bindings.conf
+++ b/.config/hypr/bindings.conf
@@ -14,7 +14,7 @@ bindd = SUPER SHIFT ALT, D, Docker, exec, $terminal -e lazydocker
 bindd = SUPER SHIFT, O, Obsidian, exec, omarchy-launch-or-focus "^obsidian$" "uwsm-app -- obsidian -disable-gpu --enable-wayland-ime"
 # bindd = SUPER SHIFT, W, Typora, exec, uwsm-app -- typora
 # bindd = SUPER SHIFT, SLASH, Passwords, exec, uwsm-app -- 1password
-bindd = SUPER SHIFT, D, Discord, exec, omarchy-launch-or-focus "^discord$" "uwsm-app -- discord --enable-features=WaylandWindowDecorations --ozone-platform=wayland"
+bindd = SUPER SHIFT, D, Webcord, exec, omarchy-launch-or-focus "^webcord$" "uwsm-app -- webcord --enable-features=WaylandWindowDecorations --ozone-platform=wayland"
 
 
 # If your web app url contains #, type it as ## to prevent hyprland treating it as a comment
